test/classes/generic/with-runtime-fields-errors.compopts
-s opt=1     # with-runtime-fields-errors.done.good
-s opt=2     # with-runtime-fields-errors.error.good
-s opt=3     # with-runtime-fields-errors.done.good
-s opt=4     # with-runtime-fields-errors.error.good
-s opt=5     # with-runtime-fields-errors.done.good
-s opt=6     # with-runtime-fields-errors.error.good
-s opt=7     # with-runtime-fields-errors.done.good
-s opt=8     # with-runtime-fields-errors.error.good
-s opt=9     # with-runtime-fields-errors.done.good
-s opt=10    # with-runtime-fields-errors.error.good
